Minor fixes, polish translation and misspelling in the zalukaj.tv.

--- a/IPTVPlayer/locale/pl/LC_MESSAGES/IPTVPlayer.po
+++ b/IPTVPlayer/locale/pl/LC_MESSAGES/IPTVPlayer.po
@@ -1955,4 +1955,7 @@ msgid "Subtitle background"
 msgstr "Tło napisów"
 
 msgid "Allow mpeg dash format"
-msgstr "Uwzględnij format mpeg dash"
+msgstr "Akceptuj format mpeg dash"
+
+msgid "Stop playing?"
+msgstr "Zakończyć odtwarzanie?"
