Commit ru locales prepared by @krutoj2010.

--- a/IPTVPlayer/locale/ru/LC_MESSAGES/IPTVPlayer.po
+++ b/IPTVPlayer/locale/ru/LC_MESSAGES/IPTVPlayer.po
@@ -296,7 +296,7 @@ msgid "Browse"
 msgstr "Смотреть"
 
 msgid "Buffer path"
-msgstr "Буфер путь"
+msgstr "Каталог буфера обмена"
 
 msgid "CATEGORY"
 msgstr "КАТЕГОРИИ"
@@ -1417,7 +1417,7 @@ msgid "Recorder > Player"
 msgstr "Запись > Плеер"
 
 msgid "Records path"
-msgstr "Местоположении записи"
+msgstr "Каталог для загрузки"
 
 msgid "Refresh"
 msgstr "Обновление"
@@ -3485,5 +3485,11 @@ msgstr "Проблема с входом пользователя \"%s\".\n"
 msgid "Randomize a playlist"
 msgstr "Функция случайного воспроизведения"
 
-msgid "youtube.com"
-msgstr "ютубе.com"
+msgid "New Releases"
+msgstr "Новые релизы"
+
+msgid "Categorization:"
+msgstr "Категоризации:"
+
+msgid "Recently Added"
+msgstr "Недавно добавленный"
